Update context